# ImFusion_DemoPlugin

./: CMakeLists.txt  LICENSE  README.md
include/demo_plugin/: algorithm.hpp  controller.hpp  factory.hpp  plugin.hpp
src/: algorithm.cpp  controller.cpp  controller.ui  factory.cpp  plugin.cpp
